force-app/main/default/objects/Serv_Letter_Templates__c/Serv_Letter_Templates__c.object-meta.xml
<CustomObject>
    <label>Letter Template</label>
    <nameField>
        <label>Letter Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>