force-app/main/default/objects/Serv_Letter_Templates__c/fields/DDGS_Identifier__c.field-meta.xml
<CustomField>
    <fullName>DDGS_Identifier__c</fullName>
    <label>DDGS Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>