force-app/main/default/objects/Serv_Letter_Templates__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>